--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "engines": {
     "npm": "use yarn instead",
-    "yarn": "4.1.1"
+    "yarn": "4.4.1"
   },
-  "packageManager": "yarn@4.1.1",
+  "packageManager": "yarn@4.4.1",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -25,36 +25,37 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
-    "@rushstack/eslint-patch": "^1.10.2",
+    "@rushstack/eslint-patch": "^1.10.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue-macros/volar": "^0.18.18",
+    "@types/node": "^22.5.1",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vue-macros/volar": "^0.27.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "@vueuse/core": "^10.9.0",
-    "axios": "^1.6.8",
-    "axios-retry": "^4.1.0",
-    "dayjs": "^1.11.11",
-    "eslint": "^9.1.1",
-    "eslint-plugin-vue": "^9.25.0",
+    "@vueuse/core": "^11.0.3",
+    "axios": "^1.7.5",
+    "axios-retry": "^4.5.0",
+    "dayjs": "^1.11.13",
+    "eslint": "^9.9.1",
+    "eslint-plugin-vue": "^9.27.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "postcss-html": "^1.6.0",
-    "prettier": "^3.2.5",
-    "sass": "^1.75.0",
-    "stylelint": "^16.4.0",
+    "postcss": "^8.4.41",
+    "postcss-html": "^1.7.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "stylelint": "^16.9.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "5.4.5",
-    "unplugin-vue-macros": "^2.9.1",
-    "vite": "^5.2.10",
-    "vite-plugin-webfont-dl": "^3.9.4",
-    "vue": "^3.4.26",
-    "vue-router": "^4.3.2",
-    "vue-tsc": "^2.0.14",
-    "vuetify": "^3.5.17"
+    "ts-jest": "^29.2.5",
+    "typescript": "5.5.4",
+    "unplugin-vue-macros": "^2.11.6",
+    "vite": "^5.4.2",
+    "vite-plugin-webfont-dl": "^3.9.5",
+    "vue": "^3.4.38",
+    "vue-router": "^4.4.3",
+    "vue-tsc": "^2.1.2",
+    "vuetify": "^3.7.1"
   }
 }
