--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.node.json",
+    "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --fix",
@@ -26,9 +28,9 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.10.4",
-    "@types/jest": "^29.5.12",
     "@types/node": "^22.5.1",
     "@vitejs/plugin-vue": "^5.1.3",
+    "@vitest/coverage-v8": "^2.0.5",
     "@vue-macros/volar": "^0.27.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -39,7 +41,6 @@
     "dayjs": "^1.11.13",
     "eslint": "^9.9.1",
     "eslint-plugin-vue": "^9.27.0",
-    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.41",
     "postcss-html": "^1.7.0",
@@ -48,11 +49,11 @@
     "stylelint": "^16.9.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "ts-jest": "^29.2.5",
     "typescript": "5.5.4",
     "unplugin-vue-macros": "^2.11.6",
     "vite": "^5.4.2",
     "vite-plugin-webfont-dl": "^3.9.5",
+    "vitest": "^2.0.5",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
     "vue-tsc": "^2.1.2",
