--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
     "npm-run-all": "^4.1.5",
+    "pinia": "^2.2.4",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
